<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".AddContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/first_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:ems="10"
            android:hint="@string/enter_firstName"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/last_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:ems="10"
            android:hint="@string/enter_lastName"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/phoneNumber"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:ems="10"
            android:hint="@string/phone_number_here"
            android:importantForAutofill="no"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00ff00"
            android:text="@string/add"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,UnusedAttribute" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#ff0000"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,UnusedAttribute" />
    </LinearLayout>

</LinearLayout>